<resources>
    <string name="title_activity_otp_validation">OtpValidationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="permission_denied_message">"If you denied this permission, you cannot use this feature\n Please turn on permissions at [App Setting] > [Permission]"</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong">Something went wrong, try again</string>
    <string name="otp_submitted_successfully">OTP has been submitted to your number, please verify</string>
    <string name="fill_otp_send_to_your_number">Fill OTP, which is send on your number!</string>
    <string name="enter_mobile_number">Enter Mobile Number*</string>
    <string name="share_text_for_query">%s (%s) Whose price is %s I want to know more about this course.</string>
    <string name="mobile_number_is_not_valid">Mobile number is not valid, Try again</string>
    <string name="puchased_this_course">Start Learning …</string>
    <string name="price_details">Buy this course min at </string>
    <string name="view_notes">View Notes</string>
    <string name="lecture_code">Lecture Code</string>
    <string name="ask_doubts">Ask Doubts</string>
    <string name="home_work">Home Work</string>
    <string name="premium_video_page">Buy %s Course in just Rs. %s</string>
    <string name="starting_price">Starting Price at ₹ %s</string>
    <string name="support">Support</string>
    <string name="enquiry_about_course">Enquiry About Course</string>
    <string name="chat_with_us">Chat With Us</string>
    <string name="logout">Logout</string>
    <string name="edution_learning_pvt_ltd">Edution Learning Pvt Ltd</string>
    <string name="please_wait">please wait...</string>
    <string name="users_details">Users Details</string>
    <string name="users_otp">Users Otp</string>
    <string name="all_courses">All Courses</string>
    <string name="course_videos">Course Videos</string>
    <string name="edit_details">Edit Details</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="courses_details_video">Courses Details Video</string>
    <string name="courses_details">Courses Details</string>
    <string name="banners_details">Banners Details</string>
    <string name="notification_details">Notification Details</string>
    <string name="admin_access_users">Admin Access Users</string>
    <string name="course_name">Course Name</string>
    <string name="course_desc">Course Desc</string>
    <string name="course_basic_price">Course Basic Price</string>
    <string name="drag_amp_drop_image_here"><![CDATA[Drag & Drop a image here]]></string>
    <string name="drag_amp_drop_home_work_pdf"><![CDATA[Drag & Drop home work pdf here]]></string>
    <string name="drag_amp_drop_project_pdf"><![CDATA[Drag & Drop project pdf here]]></string>
    <string name="drag_amp_drop_video"><![CDATA[Drag & Drop a video here]]></string>
    <string name="drag_amp_drop_code_file"><![CDATA[Drag & Drop code file here]]></string>
    <string name="or">Or</string>
    <string name="browser_file">browser file</string>
    <string name="from_device">from device</string>
    <string name="submit_course_details">Submit Course Details</string>
    <string name="submit_course_video_details">Submit Course Video Details</string>
    <string name="submit_video_details">Submit Video Details</string>
    <string name="insert_course_details">Insert Course Details</string>
    <string name="course_videos_insert">Course Videos Insert</string>
    <string name="lecture_name">Lecture Name</string>
    <string name="enter_message_text_here">Enter Message Text Here</string>
    <string name="enter_video_name_here">Enter Video Name Here</string>
    <string name="submit_banner_details">Submit Banner Details</string>
    <string name="banner_details_insert">Banner Details Insert</string>
    <string name="video_details_insert">Video Details Insert</string>
    <string name="notification_insert">Notification Insert</string>
    <string name="enter_notification_message">Enter Notification Message</string>
    <string name="submit_notification">Submit Notification</string>
    <string name="course_purchase_details">Course Purchase Details</string>
    <string name="insert_course_purchase_details">Insert Course Purchase Details</string>
    <string name="course_type">Course Type</string>
    <string name="course_price">Course Price</string>
    <string name="submit_course_purchase_details">Submit Course Purchase Details</string>
    <string name="course_specification">Course Specification</string>
    <string name="add_new_item">Add New Item</string>
    <string name="min_1_item_required">Min 1 item required…</string>
    <string name="min_3_letter_is_required_in_specification_name">Min 3 letter is required in specification name…</string>
    <string name="min_3_letter_required_in_course_type_field">Min 3 letter required in this field…</string>
    <string name="min_10_letter_required_in_course_type_field">Min 10 letter required in this field…</string>
    <string name="course_price_is_required">Course Price is required…</string>
    <string name="image_size_should_be_less_than_1mb">Image size should be less than 1 mb.</string>
    <string name="video_size_should_be_less_than_1gb">Video size should be less than 1 gb.</string>
    <string name="code_file_should_be_less_than_5mb">Code File should be less than 5 mb.</string>
    <string name="home_work_should_be_less_than_5mb">Home Work should be less than 5 mb.</string>
    <string name="project_file_should_be_less_than_3mb">Project File should be less than 3 mb.</string>
    <string name="video_link_file_should_be_less_than_500mb">Video File should be less than 500 mb.</string>
    <string name="something_went_wront_please_verify_your">Something Went Wrong Please Verify</string>
    <string name="data_update_successfully">Data Update Successfully</string>
    <string name="data_insert_successfully">Data Insert Successfully</string>
    <string name="update_course_purchase_details">Update Course Purchase Details</string>
    <string name="choose_a_image">Choose a image</string>
    <string name="choose_a_video">Choose a video</string>
    <string name="update_banner_details">Update Banner Details</string>
    <string name="enter_starting_price">Enter Starting Price</string>
    <string name="update_course_details">Update Course Details</string>
    <string name="upload_successfully">Upload Successfully</string>
    <string name="video_details">Video Details</string>
    <string name="purchase_details">Purchase Details</string>
    <string name="choose_a_code_file">Choose a code file</string>
    <string name="choose_a_home_work_file">Choose a home work file</string>
    <string name="choose_a_project_file">Choose a project file</string>
    <string name="choose_a_video_file">Choose a video file</string>
    <string name="update_course_video_details">Update Course Video Details</string>
    <string name="display_order">Display Order</string>
    <string name="display_order_should_not_be_empty">Display order should not be empty</string>
    <string name="book_a_demo">Book Demo</string>
    <string name="total_users">Total Users</string>
    <string name="total_book_demo">Total Book Demo</string>
    <string name="total_users_rating">Total Users Rating</string>
    <string name="total_courses_sale">Total Courses Sale</string>
    <string name="edution_landing_page">Edution Landing Page</string>
    <string name="create_admin">Create Admin</string>
    <string name="admin_name">Admin Name</string>
    <string name="do_you_want_logout">Do you want to logout</string>
    <string name="cancel">Cancel</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="user_purchased">User Purchased</string>
    <string name="search_video_details">Search Video Details</string>
    <string name="video_name">Video Name</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="video_embed_url">Video Embed Url</string>
    <string name="video_url">Video Url</string>
</resources>