<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/support"
            android:icon="@drawable/support_icon"
            android:iconTint="@color/blue_5A4BDA"
            android:title="@string/support" />

        <item
            android:id="@+id/chat_with_us"
            android:icon="@drawable/chat_icon"
            android:iconTint="@color/blue_5A4BDA"
            android:title="@string/chat_with_us" />

        <item
            android:id="@+id/enquiry_about_course"
            android:icon="@drawable/enquiry_icon"
            android:iconTint="@color/blue_5A4BDA"
            android:title="@string/enquiry_about_course" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_icon"
            android:iconTint="@color/blue_5A4BDA"
            android:title="@string/logout" />

    </group>

</menu>