<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="toolbarText"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.CourseInsertFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/insert_item_toolbar"
            app:toolbarText="@{toolbarText}" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:shapeAppearance="@style/Cut"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:hint="@string/course_name"
                    app:hintTextColor="@color/grey_888888">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:fontFamily="@font/gilroy_medium"
                        android:id="@+id/course_name"
                        android:textSize="@dimen/dimen_14sp"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:shapeAppearance="@style/Cut"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:hint="@string/course_desc"
                    app:hintTextColor="@color/grey_888888">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:fontFamily="@font/gilroy_medium"
                        android:id="@+id/course_desc"
                        android:minLines="3"
                        android:maxLines="5"
                        android:gravity="top"
                        android:textSize="@dimen/dimen_14sp"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:shapeAppearance="@style/Cut"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:hint="@string/course_basic_price"
                    app:hintTextColor="@color/grey_888888">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:fontFamily="@font/gilroy_medium"
                        android:id="@+id/course_basic_price"
                        android:gravity="top"
                        android:textSize="@dimen/dimen_14sp"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/round_upload_section_design"
                    android:layout_marginTop="@dimen/dp_35"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:id="@+id/course_image_upload"
                    android:layout_marginEnd="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dp_130">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/dp_35"
                        android:layout_height="@dimen/dp_35"
                        android:layout_marginTop="@dimen/dp_14"
                        android:alpha="0.5"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_file_upload_icon" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView1"
                        android:text="@string/drag_amp_drop_image_here"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="@font/gilroy_medium"
                        android:layout_marginTop="@dimen/dimen_12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="@dimen/dimen_15sp"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen_12dp"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:text="@string/or"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:fontFamily="@font/gilroy_medium"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:textSize="@dimen/dimen_12sp"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:text="@string/browser_file"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:fontFamily="@font/gilroy_medium"
                            android:layout_marginStart="@dimen/dp_3"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:textSize="@dimen/dimen_14sp"
                            android:textColor="@color/quantum_purple500"
                            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:text="@string/from_device"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:fontFamily="@font/gilroy_medium"
                            android:layout_marginStart="@dimen/dp_3"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:textSize="@dimen/dimen_12sp"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_bold"
                    android:letterSpacing="0"
                    android:paddingHorizontal="@dimen/dimen_30dp"
                    android:paddingVertical="@dimen/dimen_13dp"
                    android:text="@string/submit_course_details"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/dp_32"
                    android:textSize="@dimen/sp_14"
                    app:backgroundTint="@color/button_selector"
                    app:cornerRadius="@dimen/dimen_12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>